--- a/EPPSWorkshop-Part2.ipynb
+++ b/EPPSWorkshop-Part2.ipynb
@@ -160,7 +160,45 @@
       "metadata": {}
     },
     {
-      "id": "e0f7a450-0cd4-4fdf-9fc5-bf98bae4bafc",
+      "id": "393eda7e-9278-4bbd-9d7c-2476cb577d4a",
+      "cell_type": "markdown",
+      "source": "### 4a. Annotating and Visualizing Top Genes\n\nTo make our results interpretable, we will first load our annotation file (`Arabidopsis_thaliana.TAIR10.61.gff3`), extract the gene names, and use this information to create a bar chart of the top 20 most significant genes. ",
+      "metadata": {}
+    },
+    {
+      "id": "5a3b42ab-2230-4f1a-abac-ca7741a9f5b7",
+      "cell_type": "code",
+      "source": "def get_annotations_from_gff3(gff3_path):\n    \"\"\"Parses a GFF3 file and returns a DataFrame with gene annotations.\"\"\"\n    annotations = {}\n    with open(gff3_path, 'r') as f:\n        reader = csv.reader(f, delimiter='\\t')\n        for row in reader:\n            if row[0].startswith('#'):\n                continue\n            if len(row) > 2 and row[2] == 'gene':\n                attributes = row[8]\n                gene_id = None\n                gene_symbol = None\n                id_match = re.search(r'ID=(gene:.*?);', attributes)\n                name_match = re.search(r'Name=(.*?);', attributes)\n                if id_match:\n                    gene_id = id_match.group(1)\n                if name_match:\n                    gene_symbol = name_match.group(1)\n                if gene_id:\n                    annotations[gene_id] = {'symbol': gene_symbol}\n    return pd.DataFrame.from_dict(annotations, orient='index')\n\nresults_df = pd.read_csv('analysis_results.csv', index_col=0)\ngff3_path = 'Arabidopsis_thaliana.TAIR10.61.gff3'\nannotation_df = get_annotations_from_gff3(gff3_path)\nannotated_significant_genes = results_df.join(annotation_df, how='left')\n\npadj_cutoff = 0.05\nlfc_cutoff = 1\n\ntop_upregulated = annotated_significant_genes[annotated_significant_genes['log2FoldChange'] > 0].head(10)\ntop_downregulated = annotated_significant_genes[annotated_significant_genes['log2FoldChange'] < 0].head(10)\ntop_genes_for_plot = pd.concat([top_upregulated, top_downregulated])\n\ngene_labels = top_genes_for_plot['symbol'].fillna(pd.Series(top_genes_for_plot.index).str.replace('gene:', '')).tolist()\n\nfig, ax = plt.subplots(figsize=(12, 8))\nax.barh(gene_labels, top_genes_for_plot['log2FoldChange'], color=['red' if fc > 0 else 'blue' for fc in top_genes_for_plot['log2FoldChange']])\nax.set_xlabel('Log2 Fold Change')\nax.set_title('Top 10 Up- and Downregulated Genes (hy5 vs Col-0)')\nax.grid(axis='x', linestyle='--', alpha=0.6)\nplt.tight_layout()\nplt.show()",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "1fe80ae4-1615-4649-a9a0-4b17d1d35b93",
+      "cell_type": "markdown",
+      "source": "### 4b. Functional Enrichment Analysis\n\nNow that we have our lists of up- and downregulated genes, we want to understand their collective biological function. This process is called **Functional Enrichment Analysis**, which identifies if certain biological terms (e.g., pathways, functions) are overrepresented in your gene lists.\n\nWe will use the **PANTHER Classification System**, a free online tool, to perform this. You will use the lists of genes we created below to find enriched functions. Here's a quick guide on how to use the tool and interpret your results.\n\n1.  **Prepare your gene lists**: The code below saves your significant genes to two text files, `upregulated_genes.txt` and `downregulated_genes.txt`.\n2.  **Go to the PANTHER website**: Open the [PANTHER Overrepresentation Test](http://www.pantherdb.org/tools/upload.do) in your browser.\n3.  **Upload your list**: Copy the contents of one of the `.txt` files and paste it into the query list box on the website. Be sure to select *Arabidopsis thaliana* as the organism.\n4.  **Interpret the results**: The results table will show you which Gene Ontology (GO) terms are significantly enriched. Look for terms with a low p-value (e.g., `< 0.05`). The bar chart on the website will provide a nice visualization of these results. ",
+      "metadata": {}
+    },
+    {
+      "id": "626bde68-e604-4c2f-9697-333bb90ce5bc",
+      "cell_type": "code",
+      "source": "upregulated_genes_list = annotated_significant_genes[annotated_significant_genes['log2FoldChange'] > 0].index.tolist()\ndownregulated_genes_list = annotated_significant_genes[annotated_significant_genes['log2FoldChange'] < 0].index.tolist()\n\nwith open('upregulated_genes.txt', 'w') as f:\n    for gene in upregulated_genes_list:\n        f.write(f\"{gene}\\n\")\n\nwith open('downregulated_genes.txt', 'w') as f:\n    for gene in downregulated_genes_list:\n        f.write(f\"{gene}\\n\")\n\nprint(f\"Upregulated gene list saved to 'upregulated_genes.txt' ({len(upregulated_genes_list)} genes).\")\nprint(f\"Downregulated gene list saved to 'downregulated_genes.txt' ({len(downregulated_genes_list)} genes).\")",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "7f9f62b2-b7db-4f98-9cbd-d8f59a79f024",
+      "cell_type": "markdown",
+      "source": "---",
+      "metadata": {}
+    },
+    {
+      "id": "e94210a9-da6a-4d97-b748-692dae2d54ce",
       "cell_type": "code",
       "source": "",
       "metadata": {
